Fix overflow footer (#9)

--- a/features/layout/page-container/page-container.module.scss
+++ b/features/layout/page-container/page-container.module.scss
@@ -5,7 +5,7 @@
 @use "@styles/misc";
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template: "navigation" auto "content" 1fr "footer" auto / 1fr;
   background: color.$gray-900;
@@ -17,7 +17,9 @@
 }
 
 .navigation {
-  grid-area: navigation;
+  @media (min-width: breakpoint.$desktop) {
+    grid-area: navigation;
+  }
 }
 
 .main {
@@ -32,7 +34,6 @@
   background: white;
 
   @media (min-width: breakpoint.$desktop) {
-    min-height: calc(100vh - space.$s3 - 2 * space.$s8);
     margin-top: space.$s3;
     padding: space.$s8;
     border-top-left-radius: space.$s10;
